--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.lihengming</groupId>
     <artifactId>school</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.7</java.version>
@@ -140,6 +140,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
+                <configuration>
+                    <fork>true</fork>
+                    <mainClass>com.company.project.Application</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -151,15 +162,12 @@
             </plugin>
         </plugins>
         <resources>
-            <!-- 打包时将jsp文件拷贝到META-INF目录下-->
             <resource>
-                <!-- 指定处理哪个目录下的资源文件 -->
-                <directory>src/main/webapp</directory>
-                <!--注意此次必须要放在此目录下才能被访问到-->
-                <targetPath>META-INF/resources</targetPath>
+                <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/**</include>
+                    <include>**/*</include>
                 </includes>
+                <filtering>true</filtering>
             </resource>
 
         </resources>
