--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,1 +1,5 @@
 # \u751F\u4EA7\u73AF\u5883\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://rm-bp1k17234cjw645ofgo.mysql.rds.aliyuncs.com:3306/test?useUnicode=true&characterEncoding=utf-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=Fighter5210
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
