--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://rm-bp1k17234cjw645ofgo.mysql.rds.aliyuncs.com
 spring.datasource.username=root
 spring.datasource.password=Fighter5210
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.port=8090
