--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,29 @@
-spring.profiles.active=pro
+spring.profiles.active=dev
 # \u6240\u6709\u73AF\u5883\u901A\u7528\u7684\u914D\u7F6E\uFF0C\u653E\u5728\u8FD9\u91CC
 
 # 404 \u4EA4\u7ED9\u5F02\u5E38\u5904\u7406\u5668\u5904\u7406
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+spring.resources.add-mappings=true
 
 logging.level.com.ibatis=DEBUG  
 
 #jsp 支持
 # 页面默认前缀目录
-spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.prefix=/WEB-INF/jsp/
 # 响应页面默认后缀
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.suffix=.html
 
-#关闭默认模板引擎
+spring.mvc.static-path-pattern=/**
+
+#thymelea模板配置
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#开启默认模板引擎
+spring.thymeleaf.enabled=true
+#热部署文件，页面不产生缓存，及时更新
 spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=false
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
+spring.resources.cache-period=0
