--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.lihengming</groupId>
-    <artifactId>school</artifactId>
+    <artifactId>ok</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
