--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.profiles.active=dev
+spring.profiles.active=pro
 # \u6240\u6709\u73AF\u5883\u901A\u7528\u7684\u914D\u7F6E\uFF0C\u653E\u5728\u8FD9\u91CC
 
 # 404 \u4EA4\u7ED9\u5F02\u5E38\u5904\u7406\u5668\u5904\u7406
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=true
 
-logging.level.com.ibatis=DEBUG  
+logging.level.com.ibatis=DEBUG
 
 #jsp 支持
 # 页面默认前缀目录
@@ -16,7 +16,7 @@ logging.level.com.ibatis=DEBUG
 spring.mvc.static-path-pattern=/**
 
 #thymelea模板配置
-spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
